[gd_scene load_steps=10 format=1]

[ext_resource path="res://Environment/scripts/Act_manager.gd" type="Script" id=1]
[ext_resource path="res://Environment/scripts/curtain_states.gd" type="Script" id=2]
[ext_resource path="res://Environment/stage/side_curtains.png" type="Texture" id=3]
[ext_resource path="res://Environment/stage/curtains_back.png" type="Texture" id=4]
[ext_resource path="res://Environment/stage/floor.png" type="Texture" id=5]
[ext_resource path="res://Environment/scene 1/backdrop_1_sky.png" type="Texture" id=6]
[ext_resource path="res://Environment/scene 1/backdrop_1_wall.png" type="Texture" id=7]
[ext_resource path="res://Environment/scene 2/backdrop_2_interior.png" type="Texture" id=8]
[ext_resource path="res://Environment/scene 3/backdrop_3_wall.png" type="Texture" id=9]

[node name="Environment" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Stage" type="Node2D" parent="."]

script/script = ExtResource( 2 )

[node name="curtains_side" type="Sprite" parent="Stage"]

z/z = 2
texture = ExtResource( 3 )
offset = Vector2( 400, 225 )

[node name="curtains_back" type="Sprite" parent="Stage"]

z/z = -1
texture = ExtResource( 4 )
offset = Vector2( 400, 225 )

[node name="stage_floor" type="Sprite" parent="Stage"]

z/z = -2
texture = ExtResource( 5 )
offset = Vector2( 400, 225 )

[node name="Act1" type="Node2D" parent="."]

editor/display_folded = true

[node name="Act1_background" type="Sprite" parent="Act1"]

z/z = -4
texture = ExtResource( 6 )
offset = Vector2( 400, 255 )

[node name="Act1_wall" type="Sprite" parent="Act1"]

z/z = -3
texture = ExtResource( 7 )
centered = false

[node name="Act2" type="Node2D" parent="."]

editor/display_folded = true

[node name="Act2_background" type="Sprite" parent="Act2"]

z/z = -3
texture = ExtResource( 8 )
centered = false

[node name="Act3" type="Node2D" parent="."]

[node name="Act3_wall" type="Sprite" parent="Act3"]

z/z = -3
texture = ExtResource( 9 )
centered = false


